fixing bugs for agent creation and edition on small devices

--- a/frontend/src/components/admin/EditAgent.module.css
+++ b/frontend/src/components/admin/EditAgent.module.css
@@ -18,3 +18,9 @@
         font-size: 10px;
     }
 }
+
+@media (max-width: 740px) {
+    .modal__form__row {
+        flex-direction: column;
+    }
+}
